--- a/public/secondStyle.css
+++ b/public/secondStyle.css
@@ -215,6 +215,7 @@
     .first___section {
         /* background-image: url(/img/fone.png); */
         background-image: none;
+        margin-top: 15%;
     }
     .thmoon-background {
         background-image: url(/img/fone.png);
@@ -232,4 +233,26 @@
 #doctor {
     transform: translateX(50%) !important;
     right: 50% !important;
+}
+
+#menu-container {
+    position: fixed;
+    z-index: 1000;
+    /* display: flex; */
+    background: #fff;
+    width: 100vw;
+    top: 0;
+    /* height: 9.9%; */
+}
+
+#menu-container-2 {
+    background: #fff;
+    margin: 0;
+    max-width: 100vw !important;
+    width: 100vw !important;
+    padding: 0 7%;
+}
+
+html {
+    scroll-behavior: smooth;
 }
