--- a/public/stylev1.css
+++ b/public/stylev1.css
@@ -65,6 +65,7 @@ nav {
 .menu {
     height: 6.9%;
     display: flex;
+    background: white;
 }
 
 .topnav .icon {
@@ -76,6 +77,7 @@ nav {
     margin-bottom: auto;
     margin-top: auto;
     width: 20%;
+    display: none;
 }
 
 #input_mail {
@@ -117,6 +119,10 @@ nav {
     margin-right: auto;
 }
 
+#mobile_enter_form {
+    display: none;
+}
+
 .btn-secondary {
     background-color: rgb(26, 157, 186)!important;
 }
@@ -144,6 +150,7 @@ nav {
     height: 68%;
     width: 100%;
     display: flex;
+    margin-top: 9%;
 }
 
 #service {
@@ -757,5 +764,17 @@ h3 {
     }
     #input_userpostname-error {
         width: 80%;
+    }
+}
+
+@media screen and (max-width: 2560px) {
+    .first___section {
+        margin-top: 5%;
+    }
+}
+
+@media screen and (max-width: 1440px) {
+    .first___section {
+        margin-top: 9%;
     }
 }
