--- a/public/stylev1.css
+++ b/public/stylev1.css
@@ -6,6 +6,7 @@
 
 body {
     line-height: normal!important;
+    overflow-x: hidden;
 }
 
 div {
@@ -24,7 +25,7 @@ a {
 }
 
 header {
-    height: 6.9%;
+    /* height: 6.9%; */
 }
 
 #enter {
@@ -34,8 +35,14 @@ header {
 .header___logo {}
 
 #logo {
-    max-width: 100%;
+    max-width: 95%;
     height: auto;
+}
+
+@media screen and (max-width: 1536px) {
+    #logo {
+        max-width: 80%;
+    }
 }
 
 .topnav a {
@@ -771,10 +778,43 @@ h3 {
     .first___section {
         margin-top: 5%;
     }
+    #menu-main {
+        margin-left: 25%;
+    }
+}
+
+@media screen and (max-width: 1920px) {
+    .first___section {
+        margin-top: 7%;
+    }
+    #menu-main {
+        margin-left: 20%;
+    }
+}
+
+@media screen and (max-width: 1750px) {
+    .first___section {
+        margin-top: 7.5%;
+    }
 }
 
 @media screen and (max-width: 1440px) {
     .first___section {
-        margin-top: 9%;
+        margin-top: 8%;
+    }
+    #menu-main {
+        margin-left: 11%;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    #menu-main {
+        margin-left: 36%;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    #menu-main {
+        margin-left: 44%;
     }
 }
