--- a/public/stylev1.css
+++ b/public/stylev1.css
@@ -41,7 +41,7 @@ header {
 
 @media screen and (max-width: 1536px) {
     #logo {
-        max-width: 80%;
+        /* max-width: 80%; */
     }
 }
 
@@ -72,6 +72,7 @@ nav {
 .menu {
     height: 6.9%;
     display: flex;
+    justify-content: space-between;
     background: white;
 }
 
@@ -80,11 +81,10 @@ nav {
 }
 
 #input {
-    margin-left: 10%;
+    /* margin-left: 10%; */
     margin-bottom: auto;
     margin-top: auto;
-    width: 20%;
-    display: none;
+    /* width: 20%; */
 }
 
 #input_mail {
@@ -127,7 +127,7 @@ nav {
 }
 
 #mobile_enter_form {
-    display: none;
+    /* display: none; */
 }
 
 .btn-secondary {
@@ -779,7 +779,7 @@ h3 {
         margin-top: 5%;
     }
     #menu-main {
-        margin-left: 25%;
+        margin-left: 18%;
     }
 }
 
@@ -788,7 +788,7 @@ h3 {
         margin-top: 7%;
     }
     #menu-main {
-        margin-left: 20%;
+        margin-left: 15%;
     }
 }
 
@@ -800,7 +800,7 @@ h3 {
 
 @media screen and (max-width: 1440px) {
     .first___section {
-        margin-top: 8%;
+        margin-top: 9%;
     }
     #menu-main {
         margin-left: 11%;
@@ -817,4 +817,9 @@ h3 {
     #menu-main {
         margin-left: 44%;
     }
+}
+
+#input-wrapper {
+    display: flex;
+    flex-direction: column;
 }
