--- a/public/secondStyle.css
+++ b/public/secondStyle.css
@@ -262,3 +262,41 @@ html {
         margin-top: 13%;
     }
 }
+
+.modal-title {
+    color: #00AFC9;
+    font-size: 48px !important;
+    margin: auto !important;
+    margin-top: 30px !important;
+    font-weight: bold !important;
+    font-family: 'DIN Round Pro' !important;
+    margin-bottom: -10px !important;
+}
+
+.modal-body {
+    margin: auto !important;
+    font-family: 'ChevinPro-Light' !important;
+    font-size: 20px !important;
+    margin-bottom: 20px !important;
+}
+
+.modal-header {
+    border-bottom: hidden !important;
+}
+
+.modal-footer {
+    border-top: hidden !important;
+}
+
+.close {
+    display: none !important;
+}
+
+.modal-content {
+    border-radius: 1.5rem !important;
+    text-align: center !important;
+}
+
+.btn-secondary {
+    display: none !important;
+}
