--- a/public/stylev1.css
+++ b/public/stylev1.css
@@ -35,8 +35,21 @@ header {
 .header___logo {}
 
 #logo {
-    max-width: 95%;
     height: auto;
+    width: 110%;
+    margin-top: 4%;
+}
+
+@media screen and (max-width: 425px) {
+    #logo {
+        margin-top: 1%;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    #logo {
+        margin-top: 4%;
+    }
 }
 
 @media screen and (max-width: 1536px) {
@@ -218,7 +231,8 @@ h1 {
     margin-right: 7%;
     margin-top: 3%;
     margin-bottom: 3%;
-    background-color: rgb(256, 256, 256)
+    background-color: rgb(256, 256, 256);
+    max-height: 576px;
 }
 
 h2 {
@@ -604,8 +618,7 @@ h3 {
     .mobile_zero_section {
         display: flex!important;
     }
-    #input_mail,
-    #input_pass {
+    #input_mail, #input_pass {
         background-position-y: 4px;
     }
     .right-item {
