--- a/public/secondStyle.css
+++ b/public/secondStyle.css
@@ -133,7 +133,7 @@
 }
 
 .thmoon-invalid {
-    border-bottom: 2px solid rgba(255, 0, 0, 0.5);
+    border-bottom: 2px solid rgba(255, 0, 0, 0.5) !important;
 }
 
 .thmoon-pezd {
